--- a/College-portal-System/Views/TeachingAssistant/Index.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/Index.cshtml
@@ -40,18 +40,6 @@
             </a>
         </div>
         <div class="col-lg-4 col-12">
-            <a asp-controller="TeachingAssistant" asp-action="ShowNotifications">
-                <!-- Update route parameters as needed -->
-                <div class="course-card">
-                    <div class="text-center">
-                        <h3>
-                            Show Notifications
-                        </h3>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-4 col-12">
             <a asp-controller="TeachingAssistant" asp-action="CreateQuiz">
                 <!-- Update route parameters as needed -->
                 <div class="course-card">
@@ -76,12 +64,12 @@
             </a>
         </div>
         <div class="col-lg-4 col-12">
-            <a asp-controller="TeachingAssistant" asp-action="Results">
+            <a asp-controller="TeachingAssistant" asp-action="ShowTasksSubmissions">
                 <!-- Update route parameters as needed -->
                 <div class="course-card">
                     <div class="text-center">
                         <h3>
-                            Results
+                            Show Tasks Submissions
                         </h3>
                     </div>
                 </div>
