--- a/College-portal-System/Views/TeachingAssistant/_TASidebarPartialView.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/_TASidebarPartialView.cshtml
@@ -31,9 +31,9 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="Results">
+            <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="ShowTasksSubmissions">
                 <i class="bi bi-bar-chart"></i>
-                <span>Show Results</span>
+                <span>Show Tasks Submissions</span>
             </a>
         </li>
         <li class="nav-item">
