--- a/College-portal-System/Views/Admin/CreateProfessor.cshtml
+++ b/College-portal-System/Views/Admin/CreateProfessor.cshtml
@@ -1,6 +1,6 @@
 ﻿@using College_portal_System.ViewModels.UserViewModels
 
-@model ApplicationUserFormVM
+@model ProfessorFormViewModel
 
 @{
     ViewData["Title"] = "Create Student";
