--- a/College-portal-System/Views/Admin/Index.cshtml
+++ b/College-portal-System/Views/Admin/Index.cshtml
@@ -14,7 +14,6 @@
 </div>
 <section class="section">
     <div class="row">
-
         <div class="col-lg-4 col-12">
             <a asp-controller="Admin" asp-action="StudentIndex">
                 <!-- Update route parameters as needed -->
@@ -52,24 +51,24 @@
             </a>
         </div>
         <div class="col-lg-4 col-12">
-            <a asp-controller="TeachingAssistant" asp-action="ShowNotifications">
+            <a asp-controller="Admin" asp-action="TeachingAssisstantIndex">
                 <!-- Update route parameters as needed -->
                 <div class="course-card">
                     <div class="text-center">
                         <h3>
-                            Professors
+                            Teaching Assistants
                         </h3>
                     </div>
                 </div>
             </a>
         </div>
         <div class="col-lg-4 col-12">
-            <a asp-controller="TeachingAssistant" asp-action="CreateQuiz">
+            <a asp-controller="Admin" asp-action="ProfessorIndex">
                 <!-- Update route parameters as needed -->
                 <div class="course-card">
                     <div class="text-center">
                         <h3>
-                            Teaching Assistants
+                            Professors
                         </h3>
                     </div>
                 </div>
