--- a/College-portal-System/Views/_ViewImports.cshtml
+++ b/College-portal-System/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using College_portal_System.Models.AdminViewModel
 @using DataAccessLayer.Entities
 @using College_portal_System.Utilities
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
