--- a/College-portal-System/Views/Admin/CreateTeachingAssisstant.cshtml
+++ b/College-portal-System/Views/Admin/CreateTeachingAssisstant.cshtml
@@ -1,6 +1,6 @@
 ﻿@using College_portal_System.ViewModels.UserViewModels
 
-@model ApplicationUserFormVM
+@model TAFormViewModel
 
 @{
     ViewData["Title"] = "Create Student";
@@ -12,7 +12,7 @@
         <div class="d-flex">
             <div class="p-2 col-10">
                 <h2 style="color: #000; font-weight:bold">
-                    Create New Student
+                    Create Teaching Assisstant
                 </h2>
             </div>
         </div>
@@ -22,7 +22,7 @@
 <section class="section">
     <div class="row">
 
-        <form id="examForm" asp-controller="Auth" asp-action="AddStudent" method="post" novalidate="novalidate">
+        <form id="examForm" asp-controller="Auth" asp-action="CreateTeachingAssistant" method="post" novalidate="novalidate">
             <div class="mb-3">
                 <label asp-for="FirstName" class="form-label">First Name</label>
                 <input asp-for="FirstName" class="form-control" required />
@@ -69,7 +69,7 @@
             </div>
 
             <div class="mb-3">
-                <button class="btn btn-primary" type="submit">Add Student</button>
+                <button class="btn btn-primary" type="submit">Add</button>
             </div>
         </form>
     </div>
