--- a/College-portal-System/Views/Shared/_AdminHeaderPartialView.cshtml
+++ b/College-portal-System/Views/Shared/_AdminHeaderPartialView.cshtml
@@ -1,4 +1,5 @@
-﻿@*
+﻿@using System.Security.Claims
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -22,13 +23,16 @@
 
                 <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
                     <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+                    <span class="d-none d-md-block dropdown-toggle ps-2">
+                        @* @User.FindFirst(ClaimTypes.Name)!.Value *@
+                    </span>
                 </a><!-- End Profile Iamge Icon -->
 
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                     <li class="dropdown-header">
-                        <h6>Kevin Anderson</h6>
-                        <span>Web Designer</span>
+                        <h6>
+                            @* @User.FindFirst(ClaimTypes.Name)!.Value *@
+                        </h6>
                     </li>
                     <li>
                         <hr class="dropdown-divider">
@@ -67,7 +71,9 @@
                     <li>
                         <a class="dropdown-item d-flex align-items-center" href="#">
                             <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
+                            @* <form id="SignOut" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="/">
+                                <a class="menu-link px-5 js-signout">Sign Out</a>
+                            </form> *@
                         </a>
                     </li>
 
