--- a/College-portal-System/Views/Home/Index.cshtml
+++ b/College-portal-System/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using College_portal_System.ViewModels.UserViewModels
+@model LoginViewModel
+@{
     ViewData["Title"] = "Log in";
 }
 
@@ -15,7 +17,7 @@
                 <div class="d-flex justify-content-center py-4">
                     <a href="index.html" class="logo d-flex align-items-center w-auto">
                         <img src="assets/img/logo.png" alt="">
-                        <span class="d-none d-lg-block">Login</span>
+                        <span class="d-none d-lg-block">FCAI</span>
                     </a>
                 </div><!-- End Logo -->
 
@@ -28,46 +30,30 @@
                             <p class="text-center small">Enter your username & password to login</p>
                         </div>
 
-                        <form class="row g-3 needs-validation" method="post" novalidate>
+                        <form class="row g-3" method="post" asp-action="Login" asp-controller="Home">
 
                             <div class="col-12">
                                 <label for="yourUsername" class="form-label">Username</label>
                                 <div class="input-group has-validation">
-                                    <span class="input-group-text" id="inputGroupPrepend"></span>
-                                    <input type="text" name="username" class="form-control" id="yourUsername" required>
+                                    <span class="input-group-text"></span>
+                                    <input type="text" class="form-control" asp-for="Email" required>
+                                    <span class="text-danger" asp-validation-for="Email"></span>
                                     <div class="invalid-feedback">Please enter your username.</div>
                                 </div>
                             </div>
 
                             <div class="col-12">
                                 <label for="yourPassword" class="form-label">Password</label>
-                                <input type="password" name="password" class="form-control" id="yourPassword" required>
+                                <input asp-for="Password" type="password" class="form-control" required>
                                 <div class="invalid-feedback">Please enter your password!</div>
-                            </div>
-
-                            <div class="col-12">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                                    <label class="form-check-label" for="rememberMe">Remember me</label>
-                                </div>
-                            </div>
+                                <span class="text-danger" asp-validation-for="Password"></span>
+                            </div>                          
                             <div class="col-12">
                                 <button class="btn btn-primary w-100" type="submit">Login</button>
-                            </div>
-                            <div class="col-12">
-                                <p class="small mb-0">Don't have account? <a href="pages-register.html">Create an account</a></p>
                             </div>
                         </form>
 
                     </div>
-                </div>
-
-                <div class="credits">
-                    <!-- All the links in the footer should remain intact. -->
-                    <!-- You can delete the links only if you purchased the pro version. -->
-                    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                 </div>
 
             </div>
@@ -75,8 +61,3 @@
     </div>
 
 </section>
-
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
