--- a/College-portal-System/Views/Shared/_LoginLayout.cshtml
+++ b/College-portal-System/Views/Shared/_LoginLayout.cshtml
@@ -1,6 +1,4 @@
-﻿@inject SignInManager<ApplicationUser> SignInManager
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,6 +29,9 @@
     @RenderBody()
 
     @await RenderSectionAsync("Scripts", required: false)
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="/StudentAssets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="/StudentAssets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/StudentAssets/vendor/chart.js/chart.umd.js"></script>
